# nodalhdl

./: .gitignore  README.md  README_en.md  operators_ariths_unit_test.py  operators_unit_test.py  pyproject.toml  test.py  test_ac.py  test_ex.py  test_hls.py  test_midcsolver.py  test_operators_ariths_unit.py  test_ph.py  test_pl.py  test_py.py  test_py_pattern.py  test_py_shader_pretty_hip.py  test_retime.py  test_shader_pretty_hip.py
doc/: Outline.txt  TODO.md
doc/notes/: FDCE.md  Metaclass.txt  deprecated_utils.py  pipelining_test_res.txt  set_speed_test.py
doc/validation/: test_cordic.py  test_div_signed.py  test_div_unsigned.py
examples/: test_addchain_pipelining.py  test_operators_ariths_unit.py  test_py_mod_pattern.py  test_py_pattern.py  test_py_shader_.py  test_py_shader_cornell267.py  test_py_shader_discoteq2.py  test_py_shader_pretty_hip.py  test_shader_pretty_hip.py  test_sta.py  test_structure_workflows.py
nodalhdl/: persistence.py
nodalhdl/basic/: arith.py  bits.py  operator.py
nodalhdl/basic_arch/: arith.py  bits.py  ctrl.py
nodalhdl/core/: assemble.py  deprecated_utils.py  diagram.py  fsm.py  hdl.py  operator.py  operators.py  pool.py  reusable.py  signal.py  signal_deserted.py  structure.py  util.py  utils.py
nodalhdl/py/: core.py  glsl.py  proposed.py  std.py
nodalhdl/timing/: pipelining.py  retiming.py  retiming_circuitry.py  sta.py
src/: structure_net_node_test.py  structure_netmgr_test.py  test.py  types.py
src/nodalhdl/basic/: arith.py
src/nodalhdl/comp/: __init__.py
src/nodalhdl/core/: deprecated_utils.py  diagram.py  hdl.py  (+4 more)
