[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nodalhdl"
version = "0.0.1a1"
description = "A pipelined circuit development toolchain."
readme = "README.md"
authors = [
    {name = "Gralerfics", email = "glverfer@outlook.com"}
]
license = {file = "LICENSE"}
keywords = ["hdl", "circuit", "pipelining"]
requires-python = ">=3.12"
dependencies = [
    "dill>=0.3.9",
    "networkx>=3.4.2",
    "numpy>=2.2.0"
]

[tool.setuptools]
packages = ["nodalhdl"]
